@@ -1,16 +1,19 @@
-ngx_addon_name="ngx_http_dynamic_upstream_module"
+ngx_addon_name="                        \
+    ngx_http_dynamic_upstream_module    \
+    ngx_stream_dynamic_upstream_module  \
+"
 
-DYNAMIC_UPSTREAM_SRCS="                                                 \
-                $ngx_addon_dir/src/ngx_http_dynamic_upstream_module.cpp \
-                $ngx_addon_dir/src/ngx_dynamic_upstream_op.cpp          \
-                $ngx_addon_dir/src/ngx_inet_slab.c                      \
-               "
+DYNAMIC_UPSTREAM_SRCS="                                     \
+    $ngx_addon_dir/src/ngx_http_dynamic_upstream_module.cpp \
+    $ngx_addon_dir/src/ngx_dynamic_upstream_op.cpp          \
+    $ngx_addon_dir/src/ngx_inet_slab.c                      \
+"
 
-DYNAMIC_UPSTREAM_DEPS="                                          \
-                $ngx_addon_dir/src/ngx_dynamic_upstream_module.h \
-                $ngx_addon_dir/src/ngx_dynamic_upstream_op.h     \
-                $ngx_addon_dir/src/ngx_inet_slab.h               \
-               "
+DYNAMIC_UPSTREAM_DEPS="                              \
+    $ngx_addon_dir/src/ngx_dynamic_upstream_module.h \
+    $ngx_addon_dir/src/ngx_dynamic_upstream_op.h     \
+    $ngx_addon_dir/src/ngx_inet_slab.h               \
+"
 
 CORE_INCS="$CORE_INCS $ngx_addon_dir/src"
 
@@ -20,7 +23,7 @@ if test -n "$ngx_module_link"; then
     ngx_module_incs=
     ngx_module_deps="$DYNAMIC_UPSTREAM_DEPS"
     ngx_module_srcs="$DYNAMIC_UPSTREAM_SRCS"
-    ngx_module_libs=-lstdc++
+    ngx_module_libs="-lstdc++ -lpthread"
    . auto/module
 else
     HTTP_MODULES="$HTTP_MODULES $ngx_addon_name"
