@@ -1,0 +1,84 @@
+
+#user  nobody;
+worker_processes  1;
+
+error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+error_log  logs/error.log  info;
+
+#pid        logs/nginx.pid;
+
+
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    upstream backends {
+        zone zone_for_backends1 1m;
+        dns_update 1s;
+        server 127.0.0.1:6001;
+        server 127.0.0.1:6002;
+        server 127.0.0.1:6003;
+    }
+
+    upstream backends2 {
+        zone zone_for_backends2 1m;
+        dns_update 10s;
+        server 127.0.0.1:6001;
+        server 127.0.0.1:6002;
+        server 127.0.0.1:6003;
+    }
+
+    upstream backends3 {
+        zone zone_for_backends3 1m;
+        server 127.0.0.1:6001;
+        server 127.0.0.1:6002;
+        server 127.0.0.1:6003;
+    }
+
+    upstream backends4 {
+        zone zone_for_backends4 1m;
+        dns_update 10s;
+        server mail.ru;
+        server google.com backup;
+    }
+
+    upstream backends5 {
+        zone zone_for_backends5 1m;
+        dns_update 10s;
+        dns_ipv6 on;
+        server mail.ru;
+        server google.com backup;
+    }
+
+    server {
+        listen 6000;
+
+        location /dynamic {
+            allow 127.0.0.1;
+            deny all;
+            dynamic_upstream;
+        }
+
+        location / {
+            proxy_pass http://backends;
+        }
+    }
+}
+
+stream {
+    upstream backends_stream {
+        zone zone_for_backends_stream 1m;
+        dns_update 1s;
+        server 127.0.0.1:6001;
+        server 127.0.0.1:6002;
+        server 127.0.0.1:6003;
+    }
+
+    server {
+        listen 6001;
+        proxy_pass backends_stream;
+    }
+}
