@@ -3,6 +3,8 @@ extern "C" {
 #include <ngx_config.h>
 #include <ngx_core.h>
 #include <ngx_http.h>
+#include <pthread.h>
+#include <errno.h>
 
 }
 
@@ -14,6 +16,26 @@ static char *
 ngx_dynamic_upstream(ngx_conf_t *cf, ngx_command_t *cmd, void *conf);
 
 
+static ngx_int_t
+ngx_http_dynamic_upstream_init_worker(ngx_cycle_t *cycle);
+
+static void
+ngx_http_dynamic_upstream_exit_worker(ngx_cycle_t *cycle);
+
+
+static void *
+ngx_dynamic_upstream_create_srv_conf(ngx_conf_t *cf);
+
+
+struct ngx_dynamic_upstream_srv_conf_s {
+    ngx_msec_t interval;
+    time_t     last;
+    ngx_flag_t ipv6;
+};
+typedef struct ngx_dynamic_upstream_srv_conf_s
+    ngx_dynamic_upstream_srv_conf_t;
+
+
 static ngx_command_t ngx_http_dynamic_upstream_commands[] = {
     {
         ngx_string("dynamic_upstream"),
@@ -21,6 +43,48 @@ static ngx_command_t ngx_http_dynamic_upstream_commands[] = {
         ngx_dynamic_upstream,
         0,
         0,
+        NULL
+    },
+
+    {
+        ngx_string("dns_update"),
+        NGX_HTTP_UPS_CONF | NGX_CONF_TAKE1,
+        ngx_conf_set_sec_slot,
+        NGX_HTTP_SRV_CONF_OFFSET,
+        offsetof(ngx_dynamic_upstream_srv_conf_t, interval),
+        NULL
+    },
+
+    {
+        ngx_string("dns_ipv6"),
+        NGX_HTTP_UPS_CONF | NGX_CONF_TAKE1,
+        ngx_conf_set_flag_slot,
+        NGX_HTTP_SRV_CONF_OFFSET,
+        offsetof(ngx_dynamic_upstream_srv_conf_t, ipv6),
+        NULL
+    },
+
+    ngx_null_command
+};
+
+
+static ngx_command_t ngx_stream_dynamic_upstream_commands[] = {
+
+    {
+        ngx_string("dns_update"),
+        NGX_STREAM_UPS_CONF | NGX_CONF_TAKE1,
+        ngx_conf_set_sec_slot,
+        NGX_STREAM_SRV_CONF_OFFSET,
+        offsetof(ngx_dynamic_upstream_srv_conf_t, interval),
+        NULL
+    },
+
+    {
+        ngx_string("dns_ipv6"),
+        NGX_STREAM_UPS_CONF | NGX_CONF_TAKE1,
+        ngx_conf_set_flag_slot,
+        NGX_STREAM_SRV_CONF_OFFSET,
+        offsetof(ngx_dynamic_upstream_srv_conf_t, ipv6),
         NULL
     },
 
@@ -35,11 +99,23 @@ static ngx_http_module_t ngx_http_dynamic_upstream_module_ctx = {
     NULL,                                       /* create main       */
     NULL,                                       /* init main         */
 
-    NULL,                                       /* create server     */
+    ngx_dynamic_upstream_create_srv_conf,       /* create server     */
     NULL,                                       /* merge server      */
 
     NULL,                                       /* create location   */
     NULL                                        /* merge location    */
+};
+
+
+static ngx_stream_module_t ngx_stream_dynamic_upstream_module_ctx = {
+    NULL,                                       /* preconfiguration  */
+    NULL,                                       /* postconfiguration */
+
+    NULL,                                       /* create main       */
+    NULL,                                       /* init main         */
+
+    ngx_dynamic_upstream_create_srv_conf,       /* create server     */
+    NULL                                        /* merge server      */
 };
 
 
@@ -50,6 +126,22 @@ ngx_module_t ngx_http_dynamic_upstream_module = {
     NGX_HTTP_MODULE,                           /* module type       */
     NULL,                                      /* init master       */
     NULL,                                      /* init module       */
+    ngx_http_dynamic_upstream_init_worker,     /* init process      */
+    NULL,                                      /* init thread       */
+    NULL,                                      /* exit thread       */
+    ngx_http_dynamic_upstream_exit_worker,     /* exit process      */
+    NULL,                                      /* exit master       */
+    NGX_MODULE_V1_PADDING
+};
+
+
+ngx_module_t ngx_stream_dynamic_upstream_module = {
+    NGX_MODULE_V1,
+    &ngx_stream_dynamic_upstream_module_ctx,   /* module context    */
+    ngx_stream_dynamic_upstream_commands,      /* module directives */
+    NGX_STREAM_MODULE,                         /* module type       */
+    NULL,                                      /* init master       */
+    NULL,                                      /* init module       */
     NULL,                                      /* init process      */
     NULL,                                      /* init thread       */
     NULL,                                      /* exit thread       */
@@ -57,6 +149,14 @@ ngx_module_t ngx_http_dynamic_upstream_module = {
     NULL,                                      /* exit master       */
     NGX_MODULE_V1_PADDING
 };
+
+
+static ngx_dynamic_upstream_srv_conf_t *
+ngx_dynamic_upstream_get_conf(ngx_http_upstream_srv_conf_t *uscf);
+
+
+static ngx_dynamic_upstream_srv_conf_t *
+ngx_dynamic_upstream_get_conf(ngx_stream_upstream_srv_conf_t *uscf);
 
 
 static ngx_int_t
@@ -137,13 +237,32 @@ static ngx_int_t
 ngx_dynamic_upstream_get_conf(ngx_dynamic_upstream_op_t *op,
     ngx_upstream_srv_conf_t *conf)
 {
+    ngx_dynamic_upstream_srv_conf_t *ucscf;
+
     if (op->op_param & NGX_DYNAMIC_UPSTEAM_OP_PARAM_STREAM) {
         conf->stream = ngx_stream_dynamic_upstream_get(op, conf);
-        return conf->stream != NULL ? NGX_OK : NGX_ERROR;
+        if (conf->stream != NULL) {
+            ucscf = ngx_dynamic_upstream_get_conf(conf->stream);
+            if (ucscf->interval != NGX_CONF_UNSET_MSEC)
+                op->op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_RESOLVE;
+            if (ucscf->ipv6 == 1)
+                op->op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_IPV6;
+            return NGX_OK;
+        }
+        return NGX_ERROR;
     }
 
     conf->http = ngx_http_dynamic_upstream_get(op, conf);
-    return conf->http != NULL ? NGX_OK : NGX_ERROR;
+    if (conf->http != NULL) {
+        ucscf = ngx_dynamic_upstream_get_conf(conf->http);
+        if (ucscf->interval != NGX_CONF_UNSET_MSEC)
+            op->op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_RESOLVE;
+        if (ucscf->ipv6 == 1)
+            op->op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_IPV6;
+        return NGX_OK;
+    }
+
+    return NGX_ERROR;
 }
 
 
@@ -345,4 +464,196 @@ ngx_dynamic_upstream(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
     clcf->handler = ngx_dynamic_upstream_handler;
 
     return NGX_CONF_OK;
+}
+
+
+static void *
+ngx_dynamic_upstream_create_srv_conf(ngx_conf_t *cf)
+{
+    ngx_dynamic_upstream_srv_conf_t  *conf;
+
+    conf = (ngx_dynamic_upstream_srv_conf_t *)
+        ngx_palloc(cf->pool, sizeof(ngx_dynamic_upstream_srv_conf_t));
+    if (conf == NULL) {
+        return NULL;
+    }
+
+    conf->interval = NGX_CONF_UNSET_MSEC;
+    conf->last = 0;
+    conf->ipv6 = NGX_CONF_UNSET;
+
+    return conf;
+}
+
+
+static ngx_http_upstream_main_conf_t *
+ngx_dynamic_upstream_loop_get_main_conf(ngx_http_upstream_main_conf_t *)
+{
+    return (ngx_http_upstream_main_conf_t *)
+        ngx_http_cycle_get_module_main_conf(ngx_cycle,
+            ngx_http_upstream_module);
+}
+
+
+static ngx_stream_upstream_main_conf_t *
+ngx_dynamic_upstream_loop_get_main_conf(ngx_stream_upstream_main_conf_t *)
+{
+    return (ngx_stream_upstream_main_conf_t *)
+        ngx_stream_cycle_get_module_main_conf(ngx_cycle,
+            ngx_stream_upstream_module);
+}
+
+
+static void
+ngx_dynamic_upstream_loop_conf_cb(ngx_http_upstream_srv_conf_t *uscf,
+    ngx_upstream_srv_conf_t *conf, ngx_dynamic_upstream_op_t *op)
+{
+    conf->http = uscf;
+    op->op_param &= ~NGX_DYNAMIC_UPSTEAM_OP_PARAM_STREAM;
+}
+
+
+static void
+ngx_dynamic_upstream_loop_conf_cb(ngx_stream_upstream_srv_conf_t *uscf,
+    ngx_upstream_srv_conf_t *conf, ngx_dynamic_upstream_op_t *op)
+{
+    conf->stream = uscf;
+    op->op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_STREAM;
+}
+
+
+static ngx_dynamic_upstream_srv_conf_t *
+ngx_dynamic_upstream_get_conf(ngx_http_upstream_srv_conf_t *uscf)
+{
+    ngx_dynamic_upstream_srv_conf_t *ucscf =
+        (ngx_dynamic_upstream_srv_conf_t *)
+            ngx_http_conf_upstream_srv_conf(uscf,
+                ngx_http_dynamic_upstream_module);
+    return ucscf;
+}
+
+
+static ngx_dynamic_upstream_srv_conf_t *
+ngx_dynamic_upstream_get_conf(ngx_stream_upstream_srv_conf_t *uscf)
+{
+    ngx_dynamic_upstream_srv_conf_t *ucscf =
+        (ngx_dynamic_upstream_srv_conf_t *)
+            ngx_stream_conf_upstream_srv_conf(uscf,
+                ngx_stream_dynamic_upstream_module);
+    return ucscf;
+}
+
+
+template <class M, class S> void
+ngx_dynamic_upstream_loop()
+{
+    M                               *umcf = NULL;
+    S                              **uscf = NULL;
+    ngx_upstream_srv_conf_t          conf;
+    ngx_dynamic_upstream_op_t        op;
+    ngx_uint_t                       j;
+    ngx_dynamic_upstream_srv_conf_t *ucscf;
+    time_t                           now = 0;
+
+    umcf = ngx_dynamic_upstream_loop_get_main_conf(umcf);
+    if (umcf == NULL)
+        return;
+
+    uscf = (S **) umcf->upstreams.elts;
+    if (uscf == NULL)
+        return;
+
+    for (j = 0; j < umcf->upstreams.nelts; j++) {
+        if (uscf[j]->shm_zone == NULL)
+            continue;
+
+        ucscf = ngx_dynamic_upstream_get_conf(uscf[j]);
+        if (ucscf == NULL || ucscf->interval == NGX_CONF_UNSET_MSEC)
+            continue;
+
+        time(&now);
+
+        if (ucscf->last + (time_t) ucscf->interval / 1000 > now)
+            continue;
+
+        ucscf->last = now;
+
+        ngx_memzero(&op, sizeof(ngx_dynamic_upstream_op_t));
+
+        conf.shpool = (ngx_slab_pool_t *) uscf[j]->shm_zone->shm.addr;
+        conf.peers = uscf[j]->peer.data;
+
+        op.op = NGX_DYNAMIC_UPSTEAM_OP_SYNC;
+        op.op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_RESOLVE;
+        if (ucscf->ipv6 == 1)
+            op.op_param |= NGX_DYNAMIC_UPSTEAM_OP_PARAM_IPV6;
+        op.err = "unexpected";
+        op.status = NGX_HTTP_OK;
+
+        ngx_dynamic_upstream_loop_conf_cb(uscf[j], &conf, &op);
+
+        if (ngx_dynamic_upstream_op(ngx_cycle->log, &op, &conf) == NGX_OK) {
+            ngx_time_update();
+            ngx_log_error(NGX_LOG_INFO, ngx_cycle->log, 0,
+                          "DNS dynamic resolver: %V synced", &uscf[j]->host);
+        } else if (op.status == NGX_HTTP_INTERNAL_SERVER_ERROR) {
+            ngx_time_update();
+            ngx_log_error(NGX_LOG_ERR, ngx_cycle->log, 0, op.err);
+        }
+    }
+}
+
+
+static volatile pthread_t
+DNS_sync_thr = 0;
+
+
+static void *
+ngx_http_dynamic_upstream_thread(void *)
+{
+    unsigned j;
+
+    while (DNS_sync_thr) {
+        ngx_dynamic_upstream_loop<ngx_http_upstream_main_conf_t,
+                                  ngx_http_upstream_srv_conf_t>();
+
+        ngx_dynamic_upstream_loop<ngx_stream_upstream_main_conf_t,
+                                  ngx_stream_upstream_srv_conf_t>();
+
+        for (j = 0; j < 10 && DNS_sync_thr; j++)
+            ngx_msleep(100);
+    }
+
+    return 0;
+}
+
+
+static ngx_int_t
+ngx_http_dynamic_upstream_init_worker(ngx_cycle_t *cycle)
+{
+    if (ngx_worker == 0)
+        if (pthread_create((pthread_t *) &DNS_sync_thr, NULL,
+            ngx_http_dynamic_upstream_thread, NULL) != 0) {
+            ngx_log_error(NGX_LOG_CRIT, cycle->log, 0,
+                          "errno=%d, %s", errno, strerror(errno));
+            return NGX_ERROR;
+        }
+
+    ngx_log_error(NGX_LOG_NOTICE, cycle->log, 0,
+                  "DNS dynamic resolver thread started");
+
+    return NGX_OK;
+}
+
+
+static void
+ngx_http_dynamic_upstream_exit_worker(ngx_cycle_t *cycle)
+{
+    pthread_t saved = DNS_sync_thr;
+    if (DNS_sync_thr) {
+        DNS_sync_thr = 0;
+        pthread_join(saved, NULL);
+        ngx_log_error(NGX_LOG_NOTICE, cycle->log, 0,
+                      "DNS dynamic resolver thread stopped");
+    }
 }
